--- a/python/performance/performance-legendre-series.ipynb
+++ b/python/performance/performance-legendre-series.ipynb
@@ -25,10 +25,10 @@
       "scion : -8.0\n",
       "numpy : -8.0\n",
       "-------------------------\n",
-      "scion elapsed time = 3.69 s\n",
-      "numpy elapsed time = 41.5 s\n",
+      "scion elapsed time = 3.8 s\n",
+      "numpy elapsed time = 42.4 s\n",
       "-------------------------\n",
-      "numpy / scion = 11.256220304296077\n",
+      "numpy / scion = 11.166646816244016\n",
       "-------------------------\n"
      ]
     }
@@ -75,10 +75,10 @@
       "scion : [0.9999999999999993, 1.9999999999999942, 4.000000000000009]\n",
       "numpy : [1. 2. 4.]\n",
       "-------------------------\n",
-      "scion elapsed time = 1.91 s\n",
-      "numpy elapsed time = 45.3 s\n",
+      "scion elapsed time = 1.9 s\n",
+      "numpy elapsed time = 45.6 s\n",
       "-------------------------\n",
-      "numpy / scion = 23.774905376225078\n",
+      "numpy / scion = 23.940305335181904\n",
       "-------------------------\n"
      ]
     }
@@ -125,10 +125,10 @@
       "scion : [15.0, -14.0, 2.0]\n",
       "numpy : 15.0 - 14.0·P₁(x) + 2.0·P₂(x)\n",
       "-------------------------\n",
-      "scion elapsed time = 0.716 s\n",
-      "numpy elapsed time = 24.7 s\n",
+      "scion elapsed time = 0.751 s\n",
+      "numpy elapsed time = 25.1 s\n",
       "-------------------------\n",
-      "numpy / scion = 34.50281279385488\n",
+      "numpy / scion = 33.464807969458136\n",
       "-------------------------\n"
      ]
     }
@@ -176,10 +176,10 @@
       "numpy : -15.200000000000003 - 9.4·P₁(x) + 4.809523809523809·P₂(x) -\n",
       "0.9333333333333333·P₃(x) + 0.05714285714285715·P₄(x)\n",
       "-------------------------\n",
-      "scion elapsed time = 1.05 s\n",
-      "numpy elapsed time = 32.5 s\n",
+      "scion elapsed time = 1.08 s\n",
+      "numpy elapsed time = 32.7 s\n",
       "-------------------------\n",
-      "numpy / scion = 30.994256724370665\n",
+      "numpy / scion = 30.269216348905925\n",
       "-------------------------\n"
      ]
     }
@@ -226,7 +226,7 @@
       "scion x : [-1.0, -0.9375, -0.875, -0.8125, -0.75, -0.6875, -0.625, -0.5625, -0.5, -0.4375, -0.375, -0.3125, -0.25, -0.1875, -0.125, -0.0625, 0.0, 0.0625, 0.125, 0.15625, 0.1875, 0.21875, 0.25, 0.28125, 0.3125, 0.34375, 0.375, 0.40625, 0.4375, 0.46875, 0.5, 0.53125, 0.5625, 0.59375, 0.625, 0.65625, 0.6875, 0.71875, 0.734375, 0.75, 0.765625, 0.78125, 0.796875, 0.8125, 0.828125, 0.84375, 0.859375, 0.875, 0.890625, 0.90625, 0.921875, 0.9296875, 0.9375, 0.9453125, 0.953125, 0.9609375, 0.96875, 0.9765625, 0.98046875, 0.984375, 0.98828125, 0.9921875, 0.99609375, 0.998046875, 0.9990234375, 1.0]\n",
       "scion y : [-30.0, -28.101318359375, -26.279296875, -24.532470703125, -22.859375, -21.258544921875, -19.728515625, -18.267822265625, -16.875, -15.548583984375, -14.287109375, -13.089111328125, -11.953125, -10.877685546875, -9.861328125, -8.902587890625, -8.0, -7.152099609375001, -6.357421875, -5.979583740234376, -5.614501953125, -5.261993408203125, -4.921875000000001, -4.593963623046876, -4.278076171875001, -3.974029541015626, -3.681640625, -3.400726318359376, -3.131103515625001, -2.8725891113281268, -2.625000000000001, -2.388153076171876, -2.1618652343750018, -1.9459533691406268, -1.7402343750000018, -1.5445251464843768, -1.3586425781250018, -1.1824035644531268, -1.0978431701660174, -1.0156250000000018, -0.9357261657714862, -0.8581237792968768, -0.7827949523925799, -0.7097167968750018, -0.6388664245605487, -0.5702209472656268, -0.5037574768066424, -0.4394531250000018, -0.37728500366211115, -0.3172302246093768, -0.2592658996582049, -0.23106050491333185, -0.20336914062500178, -0.17618894577026545, -0.14951705932617365, -0.12335062026977717, -0.09768676757812678, -0.07252264022827326, -0.0601270794868487, -0.0478553771972674, -0.03570717573166071, -0.02368211746215998, -0.011779844760896552, -0.005874641239644873, -0.002933503128589976, -1.7763568394002505e-15]\n",
       "-------------------------\n",
-      "scion elapsed time = 5.09 s\n",
+      "scion elapsed time = 5.12 s\n",
       "-------------------------\n"
      ]
     }
@@ -254,8 +254,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "540d853c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion coefficients : [-8.333333333333334, 14.6, -4.666666666666667, 0.4]\n",
+      "scion coefficients : [-10.333333333333334, 14.6, -4.666666666666667, 0.4]\n",
+      "-------------------------\n",
+      "scion elapsed time = 2.74 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -31./3., 73./5., -14./3., 2./5. ]\n",
+    "\n",
+    "scion_test = scion.math.LegendreSeries( coeffients )\n",
+    "\n",
+    "scion_test += 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "scion_test -= 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : \n",
+    "    scion_test += 2\n",
+    "    scion_test -= 2\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a70a4252",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion coefficients : [-20.666666666666668, 29.2, -9.333333333333334, 0.8]\n",
+      "scion coefficients : [-10.333333333333334, 14.6, -4.666666666666667, 0.4]\n",
+      "-------------------------\n",
+      "scion elapsed time = 0.886 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -31./3., 73./5., -14./3., 2./5. ]\n",
+    "\n",
+    "scion_test = scion.math.LegendreSeries( coeffients )\n",
+    "\n",
+    "scion_test *= 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "scion_test /= 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : \n",
+    "    scion_test *= 2\n",
+    "    scion_test /= 2\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7930a010",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion coefficients : [-6.333333333333334, 17.6, -2.666666666666667, 1.4, 6.0]\n",
+      "scion coefficients : [-10.333333333333334, 14.600000000000001, -4.666666666666667, 0.3999999999999999]\n",
+      "-------------------------\n",
+      "scion elapsed time = 1.75 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -31./3., 73./5., -14./3., 2./5. ]\n",
+    "\n",
+    "scion_test = scion.math.LegendreSeries( coeffients )\n",
+    "series = scion.math.LegendreSeries( [ 4., 3., 2., 1., 6. ] )\n",
+    "\n",
+    "scion_test += series\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "scion_test -= series\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : \n",
+    "    scion_test += series\n",
+    "    scion_test -= series\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "796ce584",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion coefficients : [-8.333333333333334, 14.6, -4.666666666666667, 0.4]\n",
+      "scion coefficients : [-12.333333333333334, 14.6, -4.666666666666667, 0.4]\n",
+      "-------------------------\n",
+      "scion elapsed time = 3.48 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -31./3., 73./5., -14./3., 2./5. ]\n",
+    "\n",
+    "series = scion.math.LegendreSeries( coeffients )\n",
+    "\n",
+    "scion_test = series + 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "scion_test = series - 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : \n",
+    "    scion_test = series + 2\n",
+    "    scion_test = series - 2\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c402aadb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion coefficients : [-20.666666666666668, 29.2, -9.333333333333334, 0.8]\n",
+      "scion coefficients : [-5.166666666666667, 7.3, -2.3333333333333335, 0.2]\n",
+      "-------------------------\n",
+      "scion elapsed time = 1.54 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -31./3., 73./5., -14./3., 2./5. ]\n",
+    "\n",
+    "series = scion.math.LegendreSeries( coeffients )\n",
+    "\n",
+    "scion_test = series * 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "scion_test = series / 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : \n",
+    "    scion_test = series * 2\n",
+    "    scion_test = series / 2\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6cfdf316",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion coefficients : [-6.333333333333334, 17.6, -2.666666666666667, 1.4, 6.0]\n",
+      "scion coefficients : [-14.333333333333334, 11.6, -6.666666666666667, -0.6, -6.0]\n",
+      "-------------------------\n",
+      "scion elapsed time = 2.49 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -31./3., 73./5., -14./3., 2./5. ]\n",
+    "\n",
+    "series1 = scion.math.LegendreSeries( coeffients )\n",
+    "series2 = scion.math.LegendreSeries( [ 4., 3., 2., 1., 6. ] )\n",
+    "\n",
+    "scion_test = series1 + series2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "scion_test = series1 - series2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : \n",
+    "    scion_test = series1 + series2\n",
+    "    scion_test = series1 - series2\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6bdc06e",
    "metadata": {},
    "outputs": [],
    "source": []
