--- a/python/performance/performance-polynomial-series.ipynb
+++ b/python/performance/performance-polynomial-series.ipynb
@@ -25,10 +25,10 @@
       "scion : -8.0\n",
       "numpy : -8.0\n",
       "-------------------------\n",
-      "scion elapsed time = 3.74 s\n",
-      "numpy elapsed time = 27.1 s\n",
+      "scion elapsed time = 3.87 s\n",
+      "numpy elapsed time = 27.4 s\n",
       "-------------------------\n",
-      "numpy / scion = 7.229168794998366\n",
+      "numpy / scion = 7.083889997063116\n",
       "-------------------------\n"
      ]
     }
@@ -75,10 +75,10 @@
       "scion : [1.0000000000000027, 1.999999999999982, 4.000000000000006]\n",
       "numpy : [1. 2. 4.]\n",
       "-------------------------\n",
-      "scion elapsed time = 2.15 s\n",
-      "numpy elapsed time = 35.9 s\n",
+      "scion elapsed time = 2.16 s\n",
+      "numpy elapsed time = 35.6 s\n",
       "-------------------------\n",
-      "numpy / scion = 16.722194521204315\n",
+      "numpy / scion = 16.50090071489356\n",
       "-------------------------\n"
      ]
     }
@@ -125,10 +125,10 @@
       "scion : [14.0, -14.0, 3.0]\n",
       "numpy : 14.0 - 14.0·x¹ + 3.0·x²\n",
       "-------------------------\n",
-      "scion elapsed time = 0.747 s\n",
-      "numpy elapsed time = 24.6 s\n",
+      "scion elapsed time = 0.742 s\n",
+      "numpy elapsed time = 24.7 s\n",
       "-------------------------\n",
-      "numpy / scion = 32.980075257952045\n",
+      "numpy / scion = 33.351173283328826\n",
       "-------------------------\n"
      ]
     }
@@ -175,10 +175,10 @@
       "scion : [-17.583333333333336, -8.0, 7.0, -2.3333333333333335, 0.25]\n",
       "numpy : -17.583333333333336 - 8.0·x¹ + 7.0·x² - 2.3333333333333335·x³ + 0.25·x⁴\n",
       "-------------------------\n",
-      "scion elapsed time = 1.06 s\n",
-      "numpy elapsed time = 29.5 s\n",
+      "scion elapsed time = 1.09 s\n",
+      "numpy elapsed time = 29.7 s\n",
       "-------------------------\n",
-      "numpy / scion = 27.754879691441296\n",
+      "numpy / scion = 27.32308588055247\n",
       "-------------------------\n"
      ]
     }
@@ -225,7 +225,7 @@
       "scion x : [-1.0, -0.9375, -0.875, -0.8125, -0.75, -0.6875, -0.625, -0.5625, -0.5, -0.4375, -0.375, -0.3125, -0.25, -0.1875, -0.125, -0.0625, 0.0, 0.0625, 0.125, 0.15625, 0.1875, 0.21875, 0.25, 0.28125, 0.3125, 0.34375, 0.375, 0.40625, 0.4375, 0.46875, 0.5, 0.53125, 0.5625, 0.59375, 0.625, 0.65625, 0.6875, 0.71875, 0.734375, 0.75, 0.765625, 0.78125, 0.796875, 0.8125, 0.828125, 0.84375, 0.859375, 0.875, 0.890625, 0.90625, 0.921875, 0.9296875, 0.9375, 0.9453125, 0.953125, 0.9609375, 0.96875, 0.9765625, 0.98046875, 0.984375, 0.98828125, 0.9921875, 0.99609375, 0.998046875, 0.9990234375, 1.0]\n",
       "scion y : [-30.0, -28.101318359375, -26.279296875, -24.532470703125, -22.859375, -21.258544921875, -19.728515625, -18.267822265625, -16.875, -15.548583984375, -14.287109375, -13.089111328125, -11.953125, -10.877685546875, -9.861328125, -8.902587890625, -8.0, -7.152099609375, -6.357421875, -5.979583740234375, -5.614501953125, -5.261993408203125, -4.921875, -4.593963623046875, -4.278076171875, -3.974029541015625, -3.681640625, -3.400726318359375, -3.131103515625, -2.872589111328125, -2.625, -2.388153076171875, -2.161865234375, -1.945953369140625, -1.740234375, -1.544525146484375, -1.358642578125, -1.182403564453125, -1.0978431701660156, -1.015625, -0.9357261657714844, -0.858123779296875, -0.7827949523925781, -0.709716796875, -0.6388664245605469, -0.570220947265625, -0.5037574768066406, -0.439453125, -0.3772850036621094, -0.317230224609375, -0.2592658996582031, -0.23106050491333008, -0.203369140625, -0.17618894577026367, -0.14951705932617188, -0.12335062026977539, -0.097686767578125, -0.07252264022827148, -0.060127079486846924, -0.047855377197265625, -0.035707175731658936, -0.023682117462158203, -0.011779844760894775, -0.005874641239643097, -0.0029335031285881996, 0.0]\n",
       "-------------------------\n",
-      "scion elapsed time = 4.63 s\n",
+      "scion elapsed time = 4.69 s\n",
       "-------------------------\n"
      ]
     }
@@ -253,8 +253,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "db8232c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion coefficients : [-6.0, 14.0, -7.0, 1.0]\n",
+      "scion coefficients : [-8.0, 14.0, -7.0, 1.0]\n",
+      "-------------------------\n",
+      "scion elapsed time = 2.8 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -8., 14., -7., 1. ]\n",
+    "\n",
+    "scion_test = scion.math.PolynomialSeries( -1., 1, coeffients )\n",
+    "\n",
+    "scion_test += 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "scion_test -= 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : \n",
+    "    scion_test += 2\n",
+    "    scion_test -= 2\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e8d3bbb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion coefficients : [-16.0, 28.0, -14.0, 2.0]\n",
+      "scion coefficients : [-8.0, 14.0, -7.0, 1.0]\n",
+      "-------------------------\n",
+      "scion elapsed time = 0.9 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -8., 14., -7., 1. ]\n",
+    "\n",
+    "scion_test = scion.math.PolynomialSeries( -1., 1, coeffients )\n",
+    "\n",
+    "scion_test *= 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "scion_test /= 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : \n",
+    "    scion_test *= 2\n",
+    "    scion_test /= 2\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "42ba7573",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion coefficients : [-4.0, 17.0, -5.0, 2.0, 6.0]\n",
+      "scion coefficients : [-8.0, 14.0, -7.0, 1.0]\n",
+      "-------------------------\n",
+      "scion elapsed time = 1.77 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -8., 14., -7., 1. ]\n",
+    "\n",
+    "scion_test = scion.math.PolynomialSeries( -1., 1, coeffients )\n",
+    "series = scion.math.PolynomialSeries( -1., 1, [ 4., 3., 2., 1., 6. ] )\n",
+    "\n",
+    "scion_test += series\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "scion_test -= series\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : \n",
+    "    scion_test += series\n",
+    "    scion_test -= series\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e70db398",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion coefficients : [-6.0, 14.0, -7.0, 1.0]\n",
+      "scion coefficients : [-10.0, 14.0, -7.0, 1.0]\n",
+      "-------------------------\n",
+      "scion elapsed time = 3.46 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -8., 14., -7., 1. ]\n",
+    "\n",
+    "series = scion.math.PolynomialSeries( -1., 1, coeffients )\n",
+    "\n",
+    "scion_test = series + 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "scion_test = series - 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : \n",
+    "    scion_test = series + 2\n",
+    "    scion_test = series - 2\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6a30408e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion coefficients : [-16.0, 28.0, -14.0, 2.0]\n",
+      "scion coefficients : [-4.0, 7.0, -3.5, 0.5]\n",
+      "-------------------------\n",
+      "scion elapsed time = 1.51 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -8., 14., -7., 1. ]\n",
+    "\n",
+    "series = scion.math.PolynomialSeries( -1., 1, coeffients )\n",
+    "\n",
+    "scion_test = series * 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "scion_test = series / 2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : \n",
+    "    scion_test = series * 2\n",
+    "    scion_test = series / 2\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e7885b64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion coefficients : [-4.0, 17.0, -5.0, 2.0, 6.0]\n",
+      "scion coefficients : [-12.0, 11.0, -9.0, 0.0, -6.0]\n",
+      "-------------------------\n",
+      "scion elapsed time = 2.48 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "coeffients = [ -8., 14., -7., 1. ]\n",
+    "\n",
+    "series1 = scion.math.PolynomialSeries( -1., 1, coeffients )\n",
+    "series2 = scion.math.PolynomialSeries( -1., 1, [ 4., 3., 2., 1., 6. ] )\n",
+    "\n",
+    "scion_test = series1 + series2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "scion_test = series1 - series2\n",
+    "print( 'scion coefficients :', scion_test.coefficients )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : \n",
+    "    scion_test = series1 + series2\n",
+    "    scion_test = series1 - series2\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion elapsed time = {:.3} s'.format( time_scion ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72ef0504",
    "metadata": {},
    "outputs": [],
    "source": []
